--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@tanstack/react-query": "^4.16.1",
+    "@tanstack/react-query-devtools": "^4.16.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.1.3",
     "framer-motion": "^7.6.7",
     "next": "13.0.3",
     "react": "18.2.0",
